--- a/wiki/Sugestoes.wiki
+++ b/wiki/Sugestoes.wiki
@@ -1,3 +1,3 @@
 #summary Seção para sugestões sobre o projeto
 
-= Esta seção está disponível para dicas/sugestões sobre o projeto. =
+<h3> Esta seção está disponível para dicas/sugestões sobre o projeto. </h3>
