--- a/wiki/Contribuir.wiki
+++ b/wiki/Contribuir.wiki
@@ -1,1 +1,14 @@
 #summary Como contribuir para o projeto
+
+= Codigos-fonte =
+
+Para realizar os <i>commits</i> no repositório SVN, é preciso contatar, via e-mail, os gestores do projeto <a href"mailto:levrangeles@gmail.com">Levrangeles da Silva Filho</a> ou <a href"mailto:robson.siscoutto@unoeste.br ">Robson Augusto Siscoutto</a>, informando o objetivo no corpo da mensagem. Um e-mail será enviado em resposta assim que possível.
+
+
+= Sugestões =
+
+Acesse a <a href="https://code.google.com/p/wargen/wiki/Sugestoes">área de sugestões</a>
+
+= Dúvidas=
+
+Acesse a <a href="https://code.google.com/p/wargen/wiki/Duvidas">área de dúvidas</a>
