Edited wiki page Duvidas through web user interface.

--- a/wiki/Duvidas.wiki
+++ b/wiki/Duvidas.wiki
@@ -2,3 +2,10 @@
 
 
 <h3>Esta seção está disponível para dúvidas a respeito do projeto.</h3>
+
+Você também pode enviar por e-mail para:
+
+<UL>
+   <LI>Levrangeles da Silva Filho - levrangeles@gmail.com</LI>
+   <LI>Robson Augusto Siscoutto - robson.siscoutto@unoeste.br</LI>
+</UL>
