Edited wiki page Duvidas through web user interface.

--- a/wiki/Duvidas.wiki
+++ b/wiki/Duvidas.wiki
@@ -6,6 +6,6 @@
 Você também pode enviar por e-mail para:
 
 <UL>
-   <LI>Levrangeles da Silva Filho - <levrangeles@gmail.com></LI>
+   <LI>Levrangeles da Silva Filho - levrangeles@gmail.com</LI>
    <LI>Robson Augusto Siscoutto - robson.siscoutto@unoeste.br</LI>
 </UL>
