--- a/branch/1.1.0a/Codigo-Fonte/visualizador/android/wargen/res/values/strings.xml
+++ b/branch/1.1.0a/Codigo-Fonte/visualizador/android/wargen/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">WARGEN</string>
     <string name="app_description">Web Augmented Reality Generator</string>
     <string name="title_activity_principal">WARGEN</string>
+    <string name="title_activity_configuracao_servidor">Configuracao do Servidor</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
